--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <form id="survey-form" class="mt-4">
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-      <div id="result-container" class="mt-4 p-3 d-none">
+      <div id="results-container" class="mt-4 p-3 d-none">
         <h2 class="text-center">
           This is your suggested programming language:
         </h2>
