--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <h1 class="text-center mt-4">Programming language Suggester</h1>
       <script src="js/scripts.js"></script>
-      <form id="survey-form" class="mt-4">
+      <form id="surveyForm" class="mt-4">
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       <div id="results-container" class="mt-4 p-3 d-none">
@@ -26,7 +26,7 @@
         <p id="result" class="lead text-center"></p>
       </div>
     </div>
-    <script src="js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
