--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <body>
     <div class="container">
       <h1 class="text-center mt-4">Programming language Suggester</h1>
-      <script src="js/scripts.js"></script>
-      <form id="surveyForm" class="mt-4">
+      <form id="survey-form" class="mt-4">
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       <div id="results-container" class="mt-4 p-3 d-none">
