--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       <div id="results-container" class="mt-4 p-3 d-none">
-        <h2 class="text-center">
+        <h2 class="text-center mt-4">
           This is your suggested programming language:
         </h2>
         <p id="result" class="lead text-center"></p>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
